# python

./: README.md
DICOM-CT-RD/: DICOM-CT-PD-dict_to_pydicom.py  _dicom_dict.py  entries_added_to_dicom_dict.py  test_read_dicom.py
astra_samples_python/: s002_data2d.py  s003_gpu_reconstruction.py  s004_cpu_reconstruction.py  s007_3d_reconstruction.py  s009_projection_matrix.py  s015_fp_bp.py
demos/: Demo-UsageOfSuper.py
libastra/: .gitignore  README.md
libastra/notebooks/: algorithm.ipynb  odl_algorithm.ipynb  test_embedded_animation.ipynb
libastra/pyastra/: __init__.py  pyastra.py  setup.py
libastra/python/: Makefile  algorithm.py  astra_fdk_vs_sirt.py  astra_projector_matrix.py  conebeam_helical_sim.py  conebeam_reco.py  conebeam_sim.py  ctdata.py  make.bat  (+8 more)
libwavelets/: .gitignore  CMakeLists.txt  README.md
libwavelets/libwavelets/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  bio1.2dy.c  bio13579.2d.c  bio13579.2dy.c  bio_2d.c  bio_2dy.c  bio_3d.c  cmake_install.cmake  libwavelets_export.h  wavelet_dec3.c  wavelet_rec3.c  wavelet_transform.c  wavelet_transform.h
libwavelets/libwavelets/libwavelets/: CTestTestfile.cmake  Makefile
libwavelets/libwavelets/libwaveletstest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libwavelets/libwaveletsmex/: CMakeLists.txt  README.md  invwavelet_transform.c  libwavelets_export.h  libwaveletsmex_export.h  mexutils.h  wavelet_transform.c
nifty/: testPython.py  testPython_2.py
odl_test_tomo/: astra_cpu_2d.py  astra_cuda_2d.py  astra_cuda_3d.py  xray_trafo_scaling.py
plot-and-show/: mpl_imshow_without_plt.py
pyastra_samples/: s001_sinogram_par2d.py  s002_data2d.py  s003_gpu_reconstruction.py  s004_cpu_reconstruction.py  s005_3d_geometry.py  s006_3d_data.py  s007_3d_reconstruction.py  s008_gpu_selection.py  s009_projection_matrix.py  s010_supersampling.py  s011_object_info.py  s012_masks.py  s013_constraints.py  s014_FBP.py  s015_fp_bp.py  s016_plots.py  s017_OpTomo.py
rotation/: rot_scratch.py  rotation_in_rotated_system.py  rotation_matrix.c  rotation_matrix.py  rotation_matrix.pyx  rotation_matrix2.pyx
tests/: MyClass.py  ctdata_home.py  dataClass.py  decoratortest.py  dynamic_image.py  elr_model.py  excep.py  fibo.py  gettingStartedTest.py  methods.py  super.py  test.py  test2.py  test3.py  test4.py
(+38 files in other folders)
